src/objects/Trifecta_Survey_Question_Response__c.object
<CustomObject>
    <fields>
        <fullName>ActionPlan__c</fullName>
        <description>Action Points that you have planned to implement.</description>
        <inlineHelpText>Action Points that you have planned to implement.</inlineHelpText>
        <label>ActionPlan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <description>Choice selected by the User/Contact</description>
        <label>Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Question__c</fullName>
        <description>Id of the Survey Question in current context</description>
        <label>Survey Question</label>
        <referenceTo>Trifecta_Survey_Question__c</referenceTo>
        <relationshipLabel>Trifecta Survey Question Responses</relationshipLabel>
        <relationshipName>Trifecta_Survey_Question_Responses</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Survey_Submission__c</fullName>
        <description>Id of the Survey Submission</description>
        <label>Survey Submission</label>
        <referenceTo>Trifecta_Survey_Submission__c</referenceTo>
        <relationshipLabel>Trifecta Survey Question Responses</relationshipLabel>
        <relationshipName>Trifecta_Survey_Question_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Trifecta Survey Question Response</label>
    <nameField>
        <displayFormat>SQR-{000000}</displayFormat>
        <label>Trifecta Survey Question Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trifecta Survey Question Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>